[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Background" type="Sprite" parent="Control"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="PalyGame" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 150.0
margin/right = 990.0
margin/bottom = 300.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Record" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 350.0
margin/right = 990.0
margin/bottom = 500.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Record"
flat = false

[node name="About" type="Button" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 550.0
margin/right = 990.0
margin/bottom = 700.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "About"
flat = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]

transform/pos = Vector2( 476.178, 872.796 )
frames = SubResource( 4 )
animation = "default"
frame = 3
playing = true

[connection signal="button_up" from="Control/PalyGame" to="." method="_on_Button_button_up"]

[connection signal="button_up" from="Control/Record" to="." method="_on_Record_button_up"]

[connection signal="button_up" from="Control/About" to="." method="_on_About_button_up"]


